@@ -1,3 +1,9 @@
+2004/03/20 20:32 (-0500) muppetman
+
+	* xs/GdkEvent.xs, xs/GtkAccelGroup.xs, xs/GtkAccelMap.xs,
+	xs/GtkItemFactory.xs, xs/GtkMenu.xs, xs/GtkTreeView.xs: remove
+	private symbols from ABI
+
 2004/03/19 03:56 (-0500) muppetman
 
 	* Gtk2.pm, Makefile.PL, NEWS: 1.040 release candidate 1 (1.0391)
